Bug 1802832 - Check orientation permission before throwing NotSupportedError. r=smaug

Before updating spec, the order was
1. Throw NotSupportedError if user agent doesn't support `lock()`
2. Check orientation lock permission.

But After updated (https://w3c.github.io/screen-orientation/#lock-method),
the order is
1. Check orientation lock permission.
2. Throw NotSupportedError if user agent doesn't support `lock()`

So we should check orientation permission / pre-lock conditions before
throwing `NotSupportedError`.

Differential Revision: https://phabricator.services.mozilla.com/D163284